--- a/Views/Home/Seguimiento.cshtml
+++ b/Views/Home/Seguimiento.cshtml
@@ -14,7 +14,7 @@
 </nav>
 <div class="container">
     <div class="row">
-        <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 container_seguimiento">
+        <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 container_seguimiento">
 
             <div class="container_head_detail">
                 <h2>Seguimiento de pedido</h2>
@@ -38,7 +38,7 @@
                     {
                         <div>
                             <h2 class="text-danger">Su pedido fue cancelado.</h2>
-                            <p>Para mayor información envié un correo electrónico a <a href="mailto:hola@kellys.com.pe">hola@kellys.com.pe</a> o al <a href="https://wa.link/0l6cpf">956 385 602</a></p>
+                            <p>Para mayor información envíe un correo electrónico a <a href="mailto:hola@kellys.com.pe">hola@kellys.com.pe</a> o escríbanos al <a href="https://wa.link/0l6cpf">956 385 602</a></p>
                         </div>
                     }
                     else
