--- a/Views/Shared/_LoadingPartial.cshtml
+++ b/Views/Shared/_LoadingPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-sm">
-        <div class="modal-content" style="background-color: #fff0;">
+        <div class="modal-content rounded-0" style="background-color: #fff0; border: 0;">
             <div class="modal-body">
                 <div class="d-flex justify-content-center">
                     <div class="spinner-grow" role="status">
