change in css in track view

--- a/Views/Home/Seguimiento.cshtml
+++ b/Views/Home/Seguimiento.cshtml
@@ -202,6 +202,10 @@
                     $('.barra').width('auto');
                 }
             });
+
+            if ($('#statusInfoPickUp').length) {
+                $('.barra').addClass("barraPickUp");
+            }
         });
     </script>
 }
